--- a/client/CmsClient/Views/MainWindow.xaml
+++ b/client/CmsClient/Views/MainWindow.xaml
@@ -1,25 +1,29 @@
-﻿<Window x:Class="CmsClient.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CmsClient.Views"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="CmsClient.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:CmsClient.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="320" Width="320"/>
+            <ColumnDefinition Width="320" MinWidth="320" />
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0"></StackPanel>
-        <GridSplitter Grid.Column="1" 
-                      HorizontalAlignment="Stretch" 
-                      VerticalAlignment="Stretch"
-                      Background="LightGray" 
-                      ShowsPreview="True"
-                      ResizeDirection="Columns"
-                      Width="3"/>
+        <StackPanel Grid.Column="0" />
+        <GridSplitter
+            Grid.Column="1"
+            Width="3"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Background="LightGray"
+            ResizeDirection="Columns"
+            ShowsPreview="True" />
         <local:MediaFileListView x:Name="fileList" Grid.Column="2" />
     </Grid>
 </Window>
