--- a/client/CmsClient/Views/MediaFileListView.xaml
+++ b/client/CmsClient/Views/MediaFileListView.xaml
@@ -1,20 +1,22 @@
-﻿<UserControl x:Class="CmsClient.Views.MediaFileListView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CmsClient.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="CmsClient.Views.MediaFileListView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:CmsClient.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <ScrollViewer>
-        <local:FlowControl 
+        <local:FlowControl
             x:Name="flow"
-            ItemsSource="{Binding Files}" 
             HorizontalContentAlignment="Stretch"
-            VerticalContentAlignment="Stretch">
+            VerticalContentAlignment="Stretch"
+            ItemsSource="{Binding Files}">
             <local:FlowControl.ItemTemplate>
                 <DataTemplate>
-                    <local:MediaFileView Height="280" Width="{Binding ElementName=flow, Path=ActualWidth}"/>
+                    <local:MediaFileView Width="{Binding ElementName=flow, Path=ActualWidth}" Height="280" />
                 </DataTemplate>
             </local:FlowControl.ItemTemplate>
         </local:FlowControl>
