フォルダー選択ダイアログでフォルダーを選択できるように変更

--- a/client/CmsClient/Views/MainWindow.xaml
+++ b/client/CmsClient/Views/MainWindow.xaml
@@ -24,6 +24,6 @@
             Background="LightGray"
             ResizeDirection="Columns"
             ShowsPreview="True" />
-        <local:MediaFileListView x:Name="fileList" Grid.Column="2" />
+        <local:MediaFileListView DataContext="{Binding MediaFileList}" Grid.Column="2" />
     </Grid>
 </Window>
