--- a/client/CmsClient/Views/UploaderView.xaml
+++ b/client/CmsClient/Views/UploaderView.xaml
@@ -4,11 +4,23 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:CmsClient.Views"
+    xmlns:prop="clr-namespace:CmsClient.Properties"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
     <StackPanel Orientation="Vertical">
-        <ComboBox ItemsSource="{Binding PurchaseOrders}" />
+        <StackPanel.Resources>
+            <Style TargetType="ComboBox">
+                <Setter Property="Margin" Value="5" />
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="Padding" Value="16, 4" />
+            </Style>
+        </StackPanel.Resources>
+        <ComboBox x:Name="TagCombo" ItemsSource="{Binding TagChoices}" IsEditable="True" IsReadOnly="False" KeyDown="TagCombo_KeyDown" SelectionChanged="TagCombo_SelectionChanged" DisplayMemberPath="Name" />
+        <local:TagListView DataContext="{Binding SelectedTags}"/>
+        <Button HorizontalAlignment="Right" Content="{x:Static prop:Resources.UPLOAD}"  Command="{x:Static local:UploaderView.UploadCommand}" />
     </StackPanel>
 </UserControl>
