--- a/client/CmsClient/Views/TagListView.xaml
+++ b/client/CmsClient/Views/TagListView.xaml
@@ -1,21 +1,24 @@
-﻿<UserControl x:Class="CmsClient.Views.TagListView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CmsClient.Views"
-             mc:Ignorable="d" 
+﻿<ItemsControl x:Class="CmsClient.Views.TagListView"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <ItemsControl>
-        <ItemsControl.ItemsPanel>
-            <ItemsPanelTemplate>
-                <WrapPanel Orientation="Horizontal" />
-            </ItemsPanelTemplate>
-        </ItemsControl.ItemsPanel>
-        <ItemsControl.ItemTemplate>
-            <DataTemplate>
-                <TextBlock Text="{Binding Name}" />
-            </DataTemplate>
-        </ItemsControl.ItemTemplate>
-    </ItemsControl>
-</UserControl>
+    <ItemsControl.Resources>
+        <Style TargetType="materialDesign:Chip">
+            <Setter Property="Margin" Value="4"/>
+        </Style>
+    </ItemsControl.Resources>
+    <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+            <WrapPanel Orientation="Horizontal" />
+        </ItemsPanelTemplate>
+    </ItemsControl.ItemsPanel>
+    <ItemsControl.ItemTemplate>
+        <DataTemplate>
+            <materialDesign:Chip Content="{Binding Name}" IsDeletable="True" DeleteClick="Chip_DeleteClick"/>
+        </DataTemplate>
+    </ItemsControl.ItemTemplate>
+</ItemsControl>
