--- a/client/CmsClient/Views/TagListView.xaml
+++ b/client/CmsClient/Views/TagListView.xaml
@@ -1,24 +1,38 @@
-﻿<ItemsControl x:Class="CmsClient.Views.TagListView"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <ItemsControl.Resources>
+﻿<UserControl
+    x:Class="CmsClient.Views.TagListView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+    x:Name="Parent"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <UserControl.Resources>
         <Style TargetType="materialDesign:Chip">
-            <Setter Property="Margin" Value="4"/>
+            <Setter Property="Margin" Value="4" />
         </Style>
-    </ItemsControl.Resources>
-    <ItemsControl.ItemsPanel>
-        <ItemsPanelTemplate>
-            <WrapPanel Orientation="Horizontal" />
-        </ItemsPanelTemplate>
-    </ItemsControl.ItemsPanel>
-    <ItemsControl.ItemTemplate>
-        <DataTemplate>
-            <materialDesign:Chip Content="{Binding Name}" IsDeletable="True" DeleteClick="Chip_DeleteClick"/>
-        </DataTemplate>
-    </ItemsControl.ItemTemplate>
-</ItemsControl>
+        <CollectionViewSource x:Key="src" Source="{Binding ElementName=Parent, Path=DataContext}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="Name" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+    </UserControl.Resources>
+    <ItemsControl ItemsSource="{Binding Source={StaticResource src}}">
+        <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+                <WrapPanel Orientation="Horizontal" />
+            </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+        <ItemsControl.ItemTemplate>
+            <DataTemplate>
+                <materialDesign:Chip
+                    Content="{Binding Name}"
+                    DeleteClick="Chip_DeleteClick"
+                    IsDeletable="True" />
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
+    </ItemsControl>
+</UserControl>
